Requires:
~~~~~~~~~
- CMF 1.5.4
New features:
~~~~~~~~~~~~~
- Add new ZODB 3.5 addBeforeCommitHook() API
- CMF > 1.5.4 : refactoring of CMFCatalogAware (PatchCMFCoreCMFCatalogAware)
Bug fixes:
~~~~~~~~~~
-
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
-