@@ -4,7 +4,8 @@ Requires:
 New features:
 ~~~~~~~~~~~~~
 - Add new ZODB 3.5 addBeforeCommitHook() API
-- CMF > 1.5.4 : refactoring of CMFCatalogAware (PatchCMFCoreCMFCatalogAware)
+- CMF > 1.5.4: refactoring of CMFCatalogAware (PatchCMFCoreCMFCatalogAware)
+- CMF > 1.5.4: fixed CMFSetup to export old list properties
 Bug fixes:
 ~~~~~~~~~~
 -
